--- a/clientsrc/package.json
+++ b/clientsrc/package.json
@@ -13,6 +13,8 @@
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "vue": "^2.5.17",
+    "vue-flip": "^1.0.2",
+    "vue-flipper": "^1.0.0",
     "vue-router": "^3.0.1",
     "vue-select": "^3.10.8",
     "vuex": "^3.0.1"
